fixed text overflow issueissue for bio

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 	padding: 30px;
 }
 
-a{
+a {
   text-decoration: none;
   font-family: 'Poppins', sans-serif;
   /*font-family: 'Marcellus', serif;*/
@@ -21,7 +21,7 @@ a{
 
 }
 
-a:hover{
+a:hover {
 	color: lightsteelblue;
 	text-shadow: 10px 10px 8px black;
 
@@ -55,9 +55,7 @@ header{
 	top: 0;
 	margin-left: -100px;
 	margin-top: 20px;
-  	/*margin-top: 10px;*/
   	width: 100%;
-  	/*font-family: 'Poppins', sans-serif;*/
   	font-family: 'Baloo', cursive;
   	text-shadow: 4px 2px 8px black;
   	color: white;
@@ -66,7 +64,6 @@ header{
 
 
 #name {
-	/*background-color: rgba(169, 183, 193, 1);*/
 	background-color: rgba(200, 199, 204, 1);
 	font-family: 'Sacramento', cursive;
 	border: 2px solid darkslategray;
@@ -97,11 +94,6 @@ header{
 	border: 2px solid darkgray;
 	border-radius: 5px;
 	background-color: rgba(122, 131, 150, 1);
-	/*background-color: rgba(70, 100, 118, 1);*/
-/*	background-color: rgba(200, 199, 204, 1);
-*/	/*box-shadow: 10px 10px 10px black;*/
-	/*padding: 20px;*/
-
 }
 
 #tech {
@@ -114,7 +106,6 @@ header{
 	padding: 18px;
 	border: 2px solid darkgray;
 	border-radius: 5px;
-	/*background-color: rgba(70, 100, 118, 1);*/
 	background-color: rgba(200, 199, 204, 1);
 	box-shadow: 10px 10px 10px black;
 }
@@ -125,13 +116,8 @@ header{
 	border: 2px solid darkgray;
 	border-radius: 5px;
 	background-color: rgba(122, 131, 150, 1);
-	/*background-color: rgba(67, 80, 108, 1);*/
 	box-shadow: 10px 10px 10px black;
-	/*margin-top: 170px;*/
-	/*align-items: flex-end;*/
-	/*border: 2px inset darkgray;*/
 	padding: 50px;
-	/*border-radius: 10px;*/
 	justify-content: center;
 	text-align: center;
 	justify-content: space-around;
@@ -149,30 +135,21 @@ header{
 
 
 #game {
- 	/*border: 2px solid red;*/
  	align-self: flex-end;
  	height: 400px;
  	width: 200px;
-
-
-	/*margin-left: -180px;*/
 }
 
 #world {
-	/*border: 2px solid green;*/
 	align-self: flex-end;
 	height: 400px;
 	width: 200px;
-	/*margin-left: -180px;*/
 }
 
 #willow {
-	/*border: 2px solid blue;*/
 	align-self: flex-end;
 	height: 400px;
 	width: 200px;
-	/*margin-left: -180px;*/
-
 }
 
 #contact {
@@ -180,37 +157,30 @@ header{
 	font-size: 15px;
 	text-align: center;
 	margin-top: 150px;
-
-
 }
 
 #bio {
 	font-family: 'Poppins', sans-serif;
-	/*background-color: rgba(169, 183, 193, 1);*/
 	background-color: rgba(122, 131, 150, 1);
-	border: 2px solid darkslategray;
+	border: 2px solid darkgray;
 	border-radius: 5px;
 	padding: 30px;
 	height: 550px;
 	width: 92%;
 	box-shadow: 10px 10px 10px black;
 	display: flex;
+	overflow: auto;
 	flex-direction: row;
 	justify-content: space-between;
 	align-self: center;
-	/*width: 700px;*/
-
 }
 
 #biodiv {
-	/*border: 2px solid pink;*/
 	height: 270px;
 	max-width: 70%
-	/*margin: 20px;*/
 }
 
 #mypic {
-	/*border: 2px solid red;*/
 	max-width: 65%;
 	max-height: 90%;
 }
@@ -221,13 +191,9 @@ header{
 	border-radius: 5px;
 	border: darkslategray 1px solid ;
 	box-shadow: 8px 8px 10px black;
-	/*margin-left: -15px;*/
 	margin: : 20px;
 	float: right;
 }
-
-
-
 
 
 
